fix readme file